# ShuffleVectorPass

./: CMakeLists.txt  README.md  commands  commands.txt  euler.s  euler_opt.s  merge.s  prog1.s  prog1_opt.s  prog2.s
ShuffleVectorPass/: CMakeLists.txt  CommonVectors.cpp  CommonVectors.h  FieldWidth.h  PatternMetadata.cpp  PatternMetadata.h  PatternRecognition.cpp  PatternRecognition.h  Patterns.cpp  Patterns.h  ShuffleVectorPass.cpp
ShuffleVectorPass/lib/: bitblock_iterator.hpp  carrySet.hpp  hash.hpp  idisa128.hpp  multiplex.hpp  runtime.hpp  x86_CPU_detect.h
ShuffleVectorPass/lib/idisa_cpp/: idisa_avx.cpp  idisa_neon.cpp  idisa_sse2.cpp  idisa_sse2_hand.cpp  idisa_sse3.cpp  idisa_sse4_1.cpp  idisa_sse4_2.cpp  idisa_ssse3.cpp
ShuffleVectorPass/lib/perflib/: BOM_Profiler.h  WallTime.h  i386_timer.h  perfsec.h
merge-test/: merge-optimization.ll  merge-optimization.s  merge-unalign-optimization.ll  merge-unalign-optimization.s  merge-unalign.ll  merge-unalign.s  merge.s  readme.txt
